# hqsworkshop

./: .gitignore  README.md  pyproject.toml
src/merqury/algorithms/: sweep.py
src/merqury/files/: pauli_hamiltonian_10qubits.npy  pauli_hamiltonian_14qubits.npy  pauli_hamiltonian_18qubits.npy  pauli_hamiltonian_22qubits.npy  pauli_hamiltonian_26qubits.npy  pauli_hamiltonian_30qubits.npy  pauli_hamiltonian_34qubits.npy  pauli_hamiltonian_38qubits.npy  pauli_hamiltonian_42qubits.npy  pauli_hamiltonian_46qubits.npy  pauli_hamiltonian_50qubits.npy  pauli_hamiltonian_6qubits.npy  pauli_hamiltonian_8qubits.npy
src/merqury/hamiltonians/: pauliops.py  plot_spectrum.py
src/merqury/hardware/: loaded_hamiltonian_run.py  run.py  tfim_run.py
src/merqury/output/: pauli_hamiltonian_10qubits.json  pauli_hamiltonian_18qubits.json  pauli_hamiltonian_22qubits.json
src/merqury/output_v1/: pauli_hamiltonian_14qubits.json  pauli_hamiltonian_6qubits.json  pauli_hamiltonian_8qubits.json
src/merqury/output_v2/: pauli_hamiltonian_10qubits.json  pauli_hamiltonian_14qubits.json  pauli_hamiltonian_6qubits.json  pauli_hamiltonian_8qubits.json
src/merqury/utils/: clean_jsons.py  hardware.py  json_utils.py  plots.py
