[project]
name = "merqury"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
"annotated-types==0.7.0",
"asttokens==3.0.1",
"certifi==2025.11.12      ",
"cffi==2.0.0",
"charset-normalizer==3.4.4",
"colorama==0.4.6",
"comm==0.2.3",
"contourpy==1.3.3",
"cryptography==46.0.3",
"cycler==0.12.1",
"debugpy==1.8.17",
"decorator==5.2.1",
"deprecated==1.3.1",
"dill==0.4.0",
"executing==2.2.1",
"fonttools==4.60.1",
"googleapis-common-protos==1.72.0",
"grpcio==1.76.0",
"ibm-cloud-sdk-core==3.24.1",
"ibm-platform-services==0.66.1",
"idna==3.11",
"importlib-metadata==8.4.0",
"ipykernel==7.1.0",
"ipython==9.7.0",
"ipython-pygments-lexers==1.1.1",
"iqm-client==32.1.1",
"iqm-data-definitions==2.19",
"iqm-exa-common==27.3.1",
"iqm-pulse==12.6.1",
"iqm-station-control-client==11.3.1",
"jax==0.8.1",
"jaxlib==0.8.1",
"jedi==0.19.2",
"jinja2==3.0.3",
"jupyter-client==8.6.3",
"jupyter-core==5.9.1",
"kiwisolver==1.4.9",
"markupsafe==3.0.3",
"matplotlib==3.10.7",
"matplotlib-inline==0.2.1",
"ml-dtypes==0.5.4",
"nest-asyncio==1.6.0",
"numpy==2.3.5",
"numpy-typing-compat==20250818.2.3",
"opentelemetry-api==1.27.0",
"opentelemetry-exporter-otlp==1.27.0",
"opentelemetry-exporter-otlp-proto-common==1.27.0",
"opentelemetry-exporter-otlp-proto-grpc==1.27.0",
"opentelemetry-exporter-otlp-proto-http==1.27.0",
"opentelemetry-proto==1.27.0",
"opentelemetry-sdk==1.27.0",
"opentelemetry-semantic-conventions==0.48b0",
"opt-einsum==3.4.0",
"optype==0.14.0",
"packaging==24.1",
"pandas==2.3.3",
"parso==0.8.5",
"pillow==12.0.0",
"platformdirs==4.5.0",
"prompt-toolkit==3.0.52",
"protobuf==4.25.8",
"psutil==7.1.3",
"pure-eval==0.2.3",
"pycparser==2.23",
"pydantic==2.12.4",
"pydantic-core==2.41.5",
"pygments==2.19.2",
"pyjwt==2.10.1",
"pyparsing==3.2.5",
"pyspnego==0.12.0",
"python-dateutil==2.9.0.post0",
"python-dotenv==0.21.1",
"python-rapidjson==1.20",
"pytz==2025.2",
"pyyaml==6.0.3",
"pyzmq==27.1.0",
"qiskit==2.2.3",
"qiskit-addon-sqd==0.12.0",
"qiskit-aer==0.17.2",
"qiskit-ibm-runtime==0.43.1",
"qoqo-calculator-pyo3==1.7.1",
"requests==2.32.3",
"requests-ntlm==1.3.0",
"ruamel-yaml==0.17.32",
"ruamel-yaml-clib==0.2.8",
"rustworkx==0.17.1",
"scipy==1.15.3",
"scipy-stubs==1.16.3.1",
"six==1.16.0",
"sspilib==0.4.0",
"stack-data==0.6.3",
"stevedore==5.6.0",
"struqture-py==2.3.2",
"tornado==6.5.2",
"tqdm==4.67.1",
"traitlets==5.14.3",
"types-protobuf==6.32.1.20251105",
"types-requests==2.32.4.20250913",
"types-six==1.17.0.20251009",
"types-tqdm==4.67.0.20250809",
"typing-extensions==4.15.0",
"typing-inspection==0.4.2",
"tzdata==2025.2",
"urllib3==2.5.0",
"wcwidth==0.2.14",
"wrapt==2.0.1",
"xarray==2024.10.0",
"zipp==3.23.0",
]